fixed spacing

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #fafafa;
+  background-color: #FFD9C3;
 }
 
 p {
@@ -14,9 +14,9 @@ p {
 }
 
 header {
-  height: 680px;
-  background-color: #FED3AF;
-  border-bottom: 1px solid rgba(0,0,0,.0975);
+  margin: 0 auto;
+  height: 100px;
+  background-color: #333741;
 }
 
 
@@ -34,8 +34,10 @@ span:hover {
 }
 
 li {
+  font-size: 16px;
   margin-left: 20px;
   padding-left: 20px;
+  line-height: 1.2em;
 }
 
 
@@ -43,6 +45,5 @@ li {
   ul.info {
     margin-top: 50px;
     padding-left: 30px;
-    border-left: 5px solid #ff8200;
   }
 }
