--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -2,70 +2,44 @@
 
 .container {
   @extend %marg-auto;
-  padding-top: 20px;
   font-family: $stack-mada;
-  width: 90%;
-  max-width: 1024px;
-  padding: 50px;
+  width: 100%;
+  padding: 30px;
+  background-color: #FFD9C3;
+  max-width: 1440px;
+}
+
+.project-info{
+  padding: 0 50px 30px;
+  margin: 0 auto;
+  height: auto;
+  margin-bottom: 30px;
+  max-width: 768px;
+  background-color:rgba(255,255,255,.25);
+  border: 1px solid rgba(0,0,0,.0975);
 }
 
 
-.info {
-@extend %marg-auto;
-  @include mq(medium) {
-    max-width: 768px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  width: 650px;
-	font-size: 18px;
-  font-weight: $font-wt-regular;
-  color: $grey;
-	line-height: 2;
-  @include mq(small){
-    font-size: 16px;
-    max-width: 220px;
-    font-weight: $font-wt-bold;
-    line-height: 1.5;
-  }
+.video-section{
+  max-width: 768px;
+  margin: 0 auto;
 }
-
 
 h2 {
   margin: auto;
-  font-size: 30px;
+  font-size: 26px;
   color: #fff;
-  font-weight: $font-wt-bold;
-  padding-top: 85px;
-  height: 180px;
-  background-color: #333741;
+  font-weight: $font-wt-regular;
+  padding-top: 45px;
   text-align: center;
 }
 
-h1 {
-  margin-bottom: 0;
-  margin-top: 0;
-  color: $color--primary;
-    @include mq(medium) {
-      max-width: 768px;
-      font-size: 50px;
-      font-weight: $font-wt-thin;
-    }
-    @include mq(small){
-      margin-top:20px;
-      font-size: 22px;
-      max-width: 200px;
-      font-weight: $font-wt-bold;
-    }
+.subhead {
+  font-size:22px;
+  font-weight: $font-wt-thin;
+  text-align: center;
 }
 
 .caption-text {
   font-weight: $font-wt-bold;
-}
-
-.container {
-  @include mq(medium){
-    max-width: 768px;
-  }
 }
